Fix responsive layout issues

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -616,7 +616,7 @@ body {
             line-height: 0;
             width: 1.8rem;
             height: 1.8rem;
-            background-color: $italia;
+            background-color: $primary;
             padding: 0.4rem;
             border-radius: 2rem;
         }
@@ -655,9 +655,12 @@ body {
                 margin-bottom: 1rem;
                 word-wrap: break-word;
                 @include media-breakpoint-up(md) {
-                    font-size: 3.5rem;
+                    font-size: 2.7rem;
                     line-height: 1.1;
                     margin-bottom: 2rem;
+                }
+                @include media-breakpoint-up(lg) {
+                    font-size: 3.5rem;
                 }
             }
         }
@@ -669,6 +672,9 @@ body {
                 @include media-breakpoint-up(md) {
                     margin: 1rem 0;
                 }
+                @include media-breakpoint-up(lg) {
+                    font-size: 2rem;
+                }
             }
             h2 {
                 text-transform: uppercase;
@@ -676,6 +682,9 @@ body {
                 font-weight: 700;
                 letter-spacing: 0;
                 color: #17324D;
+                @include media-breakpoint-up(lg) {
+                    font-size: 1.5rem;
+                }
             }
             a {
                 text-transform: uppercase;
@@ -2046,13 +2055,13 @@ body {
   }
 //   #issues_table_wrapper {
 //     margin-right: 20px;
-  
+
 //     .paginate_button {
 //       a {
 //       text-decoration: none !important;
 //       color: #06D !important;
 //       }
-  
+
 //     }
 //     .paginate_button:hover {
 //       background: transparent !important;
@@ -2068,8 +2077,8 @@ body {
 //     #issues_table_ellipsis:after {
 //       content: '• • •';
 //     }
-  
-    
+
+
 //     table.dataTable thead > tr > th.sorting:after, table.dataTable thead > tr > td.sorting:after {
 //       display: none !important;
 //     }
@@ -2077,7 +2086,7 @@ body {
 //     table.dataTable thead > tr > td.sorting_asc:after, table.dataTable thead > tr > td.sorting_desc:after {
 //       display: none !important;
 //     }
-  
+
 //     #issues_table_filter {
 //       color: #444e57;
 //       input {
@@ -2090,7 +2099,7 @@ body {
 //     border: 1px solid #999;
 //     padding: 4px;
 //   }
-  
+
 //   #github_filter {
 //     .select2-container {
 //       width: 100% !important;
@@ -2110,7 +2119,7 @@ body {
 //         margin-left: 0.5em;
 //       }
 //     }
-  
+
 //     #issues_table_clear {
 //       box-shadow: none;
 //       width: 100%;
@@ -2118,8 +2127,8 @@ body {
 //       border: none;
 //     }
 //   }
-  
-  
+
+
 //   @media screen and (max-width: 767px) {
 //     #issues_table_wrapper {
 //       .paginate_button {
@@ -2139,7 +2148,7 @@ body {
         background-color: white;
         box-shadow: 0 8px 24px 0 rgba(50,50,50,.15)!important;
         padding: 20px;
-        
+
         ul {
             list-style-type: none;
             margin: 0;
